created more css questions

--- a/index.html
+++ b/index.html
@@ -220,29 +220,29 @@
                          Colorful Style Sheets
                        </label>
                      </div>
-               <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+               <li >Which HTML attribute is used to define inline styles?</li>
                     <div class="radio">
                      <label>
                        <input class="count1" type="radio" name="css2" value="10">
-                       alert ( );
+                      styles
                      </label>
                     </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css2" value="0">
-                         find ( );
+                         class
                        </label>
                      </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css2" value="0">
-                         prompt ( );
+                         style
                        </label>
                      </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css2" value="0">
-                         Search ( );
+                         font
                        </label>
                      </div>
                <li >Which of the following is a <strong>JavaScript</strong> output method</li>
