created more css questions

--- a/index.html
+++ b/index.html
@@ -221,12 +221,7 @@
                        </label>
                      </div>
                <li >Which HTML attribute is used to define inline styles?</li>
-                    <div class="radio">
-                     <label>
-                       <input class="count1" type="radio" name="css2" value="10">
-                      styles
-                     </label>
-                    </div>
+
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css2" value="0">
@@ -245,29 +240,35 @@
                          font
                        </label>
                      </div>
-               <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+                     <div class="radio">
+                      <label>
+                        <input class="count1" type="radio" name="css2" value="10">
+                       styles
+                      </label>
+                     </div>
+               <li >How do you insert a comment in a CSS file?</li>
                     <div class="radio">
                      <label>
                        <input class="count1" type="radio" name="css3" value="10">
-                       alert ( );
+                      /* this is a comment */
                      </label>
                     </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css3" value="0">
-                         find ( );
+                         // this is a comment //
                        </label>
                      </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css3" value="0">
-                         prompt ( );
+                        // this is a comment
                        </label>
                      </div>
                      <div class="radio">
                        <label>
                          <input class="count1" type="radio" name="css3" value="0">
-                         Search ( );
+                         ' this is a comment
                        </label>
                      </div>
               <li >Which of the following is a <strong>JavaScript</strong> output method</li>
