created more html qustions

--- a/index.html
+++ b/index.html
@@ -271,54 +271,54 @@
                          ' this is a comment
                        </label>
                      </div>
-              <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+              <li > How do you add a background color for all <strong>h1</strong>elements</li>
                    <div class="radio">
                     <label>
                       <input class="count1" type="radio" name="css4" value="10">
-                      alert ( );
+                      h1 {background-color:#FFFFFF}
                     </label>
                    </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css4" value="0">
-                        find ( );
+                        h1.all {background-color:#FFFFFF}
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css4" value="0">
-                        prompt ( );
+                        all.h1 {background-color:#FFFFFF}
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css4" value="0">
-                        Search ( );
+                      h1*
                       </label>
                     </div>
-                    <li >Which of the following is not present in <strong>Javascript</strong> </li>
+                    <li >Which CSS property controls the <strong>text size</strong> </li>
+                    <div class="radio">
+                      <label>
+                        <input class="count1" type="radio" name="css5" value="0">
+                        font-style
+                      </label>
+                    </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css5" value="10">
-                        append ( );
+                        font-size
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css5" value="0">
-                         before( );
+                         text-style
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count1" type="radio" name="css5" value="0">
-                         after ( );
-                      </label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input class="count1" type="radio" name="css5" value="0">
-                        pretend ( );
+                        text-size
                       </label>
                     </div>
                  </div>
@@ -339,104 +339,106 @@
        <div class="col-md-12">
          <div class="well">
            <ol>
-             <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+             <li >What does  <strong>HTML</strong> stand for ?</li>
                   <div class="radio">
                    <label>
                      <input class="count2" type="radio" name="html1" value="10" required>
-                     alert ( );
+                     Hyper Text Markup Language
                    </label>
                   </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html1" value="0">
-                       find ( );
+                       Hyperlinks and Text Markup Language
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html1" value="0">
-                       prompt ( );
+                       Home Tool Markup Language
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html1" value="0">
-                       Search ( );
+                       How To Make Lists
                      </label>
                    </div>
-             <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+             <li >What is the correct sequence of <strong>HTML</strong> tags for starting a webpage?</li>
                   <div class="radio">
                    <label>
                      <input class="count2" type="radio" name="html2" value="10">
-                     alert ( );
+
+                     HTML, Head, Title
                    </label>
                   </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html2" value="0">
-                       find ( );
+                       Title, Head, HTML
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html2" value="0">
-                       prompt ( );
+                       Title, Head, HTML
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html2" value="0">
-                       Search ( );
+                       Head Shoulder knees and toes
                      </label>
                    </div>
-             <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+             <li >What is the correct HTML tag for inserting a <strong> line break?</strong></li>
                   <div class="radio">
                    <label>
                      <input class="count2" type="radio" name="html3" value="10">
-                     alert ( );
+                     Br
+
                    </label>
                   </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html3" value="0">
-                       find ( );
+                       break
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="htlml3" value="0">
-                       prompt ( );
+                       Lb
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count2" type="radio" name="html3" value="0">
-                       Search ( );
+                      Loop
                      </label>
                    </div>
-            <li >Which of the following is a <strong>JavaScript</strong> output method</li>
-                 <div class="radio">
-                  <label>
-                    <input class="count2" type="radio" name="html4" value="10">
-                    alert ( );
-                  </label>
-                 </div>
+            <li >Choose the correct HTML tag to make text bold?</li>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html4" value="0">
-                      find ( );
+                      B
+                    </label>
+                  </div>
+                  <div class="radio">
+                   <label>
+                     <input class="count2" type="radio" name="html4" value="10">
+                     bold
+                   </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input class="count2" type="radio" name="html4" value="0">
+                      bld
                     </label>
                   </div>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html4" value="0">
-                      prompt ( );
-                    </label>
-                  </div>
-                  <div class="radio">
-                    <label>
-                      <input class="count2" type="radio" name="html4" value="0">
-                      Search ( );
+                      huge
                     </label>
                   </div>
                   <li >Which of the following is not present in <strong>Javascript</strong> </li>
