created more html qustions

--- a/index.html
+++ b/index.html
@@ -441,29 +441,29 @@
                       huge
                     </label>
                   </div>
-                  <li >Which of the following is not present in <strong>Javascript</strong> </li>
+                  <li >How can you make a list that lists the items with numbers?</li>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html5" value="10">
-                      append ( );
+                      OL
                     </label>
                   </div>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html5" value="0">
-                       before( );
+                       DI
                     </label>
                   </div>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html5" value="0">
-                       after ( );
+                       UI
                     </label>
                   </div>
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html5" value="0">
-                      pretend ( );
+                      List
                     </label>
                   </div>
                </div>
