created wells to display the scores

--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
                 </div>
             </div>
       </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <button onClick="jsmarks()"type="button" name="button" class="btn" id="jsSubmit">Submit</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button style="margin-left:35%" onClick="jsmarks()"type="button" name="button" class="btn" id="jsSubmit">Submit</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <button type="button" name="button" onClick="reset()" class="btn"  id="resetjs">Retake quiz</button>
-      <div id="js-results">
-
+      <div class="spacer" style="height:20px;width="80%" >    </div>
+      <div class="well">
+        <div class="bg-success" id="js-results" >
+        </div>
       </div>
       </form>
       </div>
@@ -324,10 +326,13 @@
                  </div>
              </div>
        </div>
-       <button  onClick="cssmarks()"type="button" name="button" class="btn" id="cssSubmit">Submit</button>
+       <button style="margin-left:35%" onClick="cssmarks()"type="button" name="button" class="btn"  id="cssSubmit">Submit</button>
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        <button type="button" name="button" onClick="reset()" class="btn"  id="resetcss">Retake quiz</button>
-       <div id="css-results">
+       <div class="spacer" style="height:20px;width="80%" >    </div>
+       <div class="well">
+         <div class="bg-success" id="css-results" >
+         </div>
        </div>
        </form>
        </div>
@@ -469,12 +474,14 @@
                </div>
            </div>
      </div>
-     <button onClick="htmlmarks()"type="button" name="button" class="btn" id="htmlSubmit">Submit</button>
+     <button style="margin-left:35%" onClick="htmlmarks()"type="button" name="button" class="btn" id="htmlSubmit">Submit</button>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <button type="button" name="button" onClick="reset()" class="btn"  id="resethtml">Retake quiz</button>
-     <div id="html-results" class="anim-typewriter" >
-
-     </div>
+     <div class="spacer" style="height:20px;width="80%" >    </div>
+       <div class="well">
+         <div class="bg-success"id="html-results" >
+         </div>
+       </div>
      </form>
      </div>
    </div>
