added google fonts to the wells

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   </head>
   <div class="sidebar">
        <div class="sidebar-items">
@@ -23,13 +25,13 @@
           <h4>Click to view Dojo</h4>
         </div>
         <div class="quiz-buttons">
-          <button type="button" name="button" onclick="javascriptQuiz()" class="btn" id="js-nav">JavaScript</button>
+          <button type="button" name="button" onclick="javascriptQuiz()" class="btn bg-danger" id="js-nav">JavaScript</button>
           <br>
             <div style="height:10px"class="button-spacer"></div>
-          <button type="button" name="button" onclick="htmlQuiz()"class="btn" id="html-nav">Html</button>
+          <button type="button" name="button" onclick="htmlQuiz()"class="btn bg-danger" id="html-nav">Html</button>
           <br>
           <div style="height:10px"class="button-spacer"></div>
-          <button type="button" name="button" onclick="cssQuiz()"class="btn"id="css-nav">Css</button>
+          <button type="button" name="button" onclick="cssQuiz()"class="btn bg-danger"id="css-nav">Css</button>
         </div>
         <br>
         </div>
