--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 <div class="sidebar">
   <div class="sidebar-items">
-    <img class="img-rounded" height="200px" width="200" src="resources/codeninja1.png" alt="" onclick="this.src='resources/codeninjasub.png'">
+    <img class="img-rounded" height="200px" width="200" src="resources/blackninja.gif" alt="" onclick="this.src='resources/codeninjasub.png'">
     <br><br>
     <a href="#about">Strength</a>
     <progress id="progressbar" value="0" max="100"></progress>
     <br><br>
     <div class="ninja-practise">
       <h4>Click to view Dojo</h4>
-    </div>      
+    </div>
     <div class="quiz-buttons">
       <button type="button" name="button" onclick="javascriptQuiz()" class="btn bg-danger" id="js-nav">JavaScript</button>
       <br>
@@ -31,7 +31,7 @@
       <button type="button" name="button" onclick="htmlQuiz()" class="btn bg-danger" id="html-nav">Html</button>
       <br>
       <div style="height:10px" class="button-spacer"></div>
-      <button type="button" name="button" onclick="cssQuiz()" class="btn bg-danger" id="css-nav">Css</button>
+      <button  type="button" name="button" onclick="cssQuiz()" class="btn bg-danger" id="css-nav">Css</button>
     </div>
     <br>
   </div>
