added deadline gif to the jumbotron

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <h1>Quiz Board</h1>
         <h4> Test your Might Code Ninja</h4>
       </div>
+      <div class="floater">
+        <img class="img-rounded" height="200px" width="60%" src="resources/deadline.gif" alt="" onclick="this.src='resources/codeninjasub.png'">
+      </div>
     </div>
     <!-- jumbotron wrap -->
     <div id="js-hidden">
